Add Finish project

--- a/index.html
+++ b/index.html
@@ -1,15 +1,75 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="icon" type="image/png" href="./images/GoogleIcon.png"/>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./font/style.css">
     <title>Google</title>
 </head>
 <body>
-    
+    <!-- Here header starts -->
+    <header>
+            <nav class="header">
+                <div>
+                    <ul>
+                         <li>Gmail</li>
+                         <li>Images</li>
+                         <li><i class="icon-grid"></i></li>
+                         <li><img src="./images/profile.png" alt="Profile" width="50px" ></li>
+                    </ul>
+                </div>
+             </nav>
+    </header>
+    <!-- here header outs -->
+
+
+    <!-- Here Main Section starts -->
+    <main>
+        <section class="main">
+            <img src="./images/GoogleMain.png" alt="GoogleMain">
+            <div class="main__search">
+                <form action="#">
+                        <input type="image" src="./images/lupa.png" class=" main__image">
+                        <input type="search" name="" id="" class="main__search--input">
+                        <input type="image" src="./images/microfono.png" class=" main__image--microfono">
+                </form>
+
+            </div>
+            <div class="btn__container">
+               <div class="btn">
+                    <button >Buscar en google</button>
+               </div> 
+               <div class="btn">
+                    <button >I`m Feeling Lucky</button>
+               </div>
+            </div>
+        </section>
+    </main>
+    <!-- here Main Section outs -->
+
+
+    <!-- Here footer starts -->
+    <footer>
+        <nav class="footer">
+            <ul>
+                <li>Publicidad</li>
+                <li>Negocios</li>
+                <li>Acerca de</li>
+                <li>Como funciona la busqueda</li>
+            </ul>
+            <ul style="padding-right: 40px;">
+                <li>Privacidad</li>
+                <li>Condiciones</li>
+                <li>Preferencias</li>
+            </ul>
+        </nav>
+    </footer>
+    <!-- here footer outs -->
+
 </body>
 </html>
